log/build_2024-03-30_10-48-01/custom_counter/stderr.log
/home/robot33-6/student133_ws/src/custom_counter/src/custom_counter_node.cpp:65:3: error: expected ‘;’ after class definition
   65 | }}
      |   ^
      |   ;
/home/robot33-6/student133_ws/src/custom_counter/src/custom_counter_node.cpp: In member function ‘int TestCounter::main(int, char**)’:
/home/robot33-6/student133_ws/src/custom_counter/src/custom_counter_node.cpp:65:1: warning: no return statement in function returning non-void [-Wreturn-type]
   65 | }}
      | ^
gmake[2]: *** [CMakeFiles/custom_counter_node.dir/build.make:76: CMakeFiles/custom_counter_node.dir/src/custom_counter_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/custom_counter_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
